# viuws-schema

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  generate-site.sh  pyproject.toml  setup.cfg
.github/workflows/: test-and-deploy.yml
tests/: test_dummy.py
viuws_schema/: __init__.py  __main__.py  _cli.py  base.py  schema.py  utils.py
viuws_schema/schemas/: __init__.py  base.py
viuws_schema/schemas/v01/: __init__.py  base.py  process.py  project.py  workflow.py
viuws_schema/v01/: __init__.py  base.py  message.py  module.py  plugin.py  process.py  registry.py  workflow.py
