[metadata]
name = viuws-schema
url = https://github.com/viuws/viuws-schema
author = Jonas Windhager
author_email = jonas@windhager.io
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = ViUWS schema
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    click
    pydantic>=2
python_requires = >=3.9
packages = find:

[options.entry_points]
console_scripts =
    viuws-schema = viuws_schema.__main__:main

[flake8]
max-line-length = 88
extend-ignore = E203
